--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 footer {
   font-size: 1em;
   font-weight: 100;
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   bottom: 0;
   width: 100%;
