--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,5 +1,10 @@
 /* Estilos gerais */
 .content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
   width: 100%;
   max-width: 600px;
   padding: 2rem;
@@ -9,7 +14,7 @@
 }
 
 .foto {
-  border-radius: 30%;
+  border-radius: 10px;
   width: 200px;
   transition: transform 0.5s ease;
 }
@@ -34,6 +39,7 @@
   border-radius: 0.625rem;
   display: flex;
   justify-content: center;
+  gap: 10px;
   align-items: center;
   cursor: pointer;
   transition: transform 0.8s ease, box-shadow 0.5s ease;
@@ -44,6 +50,7 @@
 }
 
 .links a {
+  text-decoration: none;
   margin-left: 0.4rem;
   text-decoration: none;
   color: white;
@@ -91,14 +98,6 @@
 
 .email:hover {
   box-shadow: 0px 0px 20px darkred, 0px 0px 20px red;
-}
-
-/* Estilos do footer */
-footer {
-  margin-top: 2rem;
-  text-align: center;
-  font-size: 0.875rem;
-  color: #666;
 }
 
 /* Estilos da div info */
