--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,15 @@
 * {
-  padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  color: white;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgba(0, 0, 0, 0.485);
+  background-color: rgb(19, 19, 19);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
